Usage tabs: hide redundant Current when matching profile
- Compute stable account ids from current credential hashes
- If Current matches a saved profile, hide Current and badge the profile as LIVE
- Keep selection on the live view when it transitions
- Ignore root assets/ scratch dir

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ CLAUDE.md
 # Local AI agent logs
 .claude/raw_logs/
 .claude/chat_logs/
+
+# Local scratch assets (not part of the app bundle)
+assets/
