--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ Packages/
 Package.resolved
 *.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/
 
+# Rust
+target/
+cauth/target/
+
 # CocoaPods
 Pods/
 
